--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
