--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
